[package]
name = "cratesio-dbdump-lookup"
version = "0.1.1"
edition = "2018"
authors = ["Alyssa Awoo <alticodes@gmail.com>", "Mikkel Rasmussen <theluja@gmail.com>"]
documentation = "http://docs.rs/cratesio-dbdump-lookup"
keywords = ["crates", "sqlite"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alyti/cratesio-dbdump-lookup"
description = "utility trait for rusqlite connection for working with crates.io dbdump data"

[features]
default = ["trace"]
trace = ["tracing"]

[dependencies]
thiserror = "1.0.19"
tracing = { version = "0.1.13", optional = true }
serde = { version = "1", features = [ "derive" ] }
rusqlite = { features = ["bundled", "csvtab"], version = "0.25.1" }

[dev-dependencies]
color-eyre = "0.5"
tracing-subscriber = { version = "0.2.5"}
tracing-error = { version = "0.1.2"}
cratesio-dbdump-csvtab = { version = "0.2.2" }